# PFE-backend

./: .gitignore  main.py  pip_dl_t_opt_power_fut_vanir.sql  pyproject.toml  temp_usp_dw_t_opt_area_sup_dem_halfh.xlsx
api/: endpoints.py
models/: agent.py  dashboard_request.py  graph_state.py  project.py
services/: dashboard_pipeline_service.py  ddl_service.py  pipe_service.py  project_service.py  udf_service.py  usp_service.py
temp/dev/: file_metadata.json
temp/dev/snowflake/dataplatform/dcl/dlz/20_table/: dl_t_opt_incon_avail_cap_yea_pl_generated.sql  dl_t_opt_interconn_load_flow_ac_generated.sql  dl_t_opt_power_area_gen_chr_uni_generated.sql
temp/dev/snowflake/dataplatform/dcl/rfz/50_view/: dw_v_opt_cap_mark_cont_rsl_late_generated.sql
temp/dev/snowflake/dataplatform/dcl/trz/20_table/: od_t_opt_cap_mark_area_cont_rsl_generated.sql
temp/dev/snowflake/dataplatform/ddl/dlz/20_table/: dl_t_opt_incon_avail_cap_yea_pl_generated.sql  dl_t_opt_interconn_load_flow_ac_generated.sql  dl_t_opt_power_area_gen_chr_uni_generated.sql
temp/dev/snowflake/dataplatform/ddl/trz/20_table/: od_t_opt_cap_mark_area_cont_rsl_generated.sql
temp/dev/snowflake/dataplatform/ddl/trz/70_procedure/: usp_od_t_opt_plant_ope_state_usp.sql  usp_od_t_opt_power_fut_vanir_usp.sql  usp_od_t_opt_unit_gen_occto_hal_usp.sql
temp/dev/snowflake/my_project/ddl/rfz/50_view/: dw_v_opt_cap_mark_cont_rsl_late_generated.sql
utils/: azure_utils.py  env_utils.py  excel_utils.py  llm_manager.py  nodes.py  pipe_nodes.py  pipe_state.py  singleton.py  state.py  tools.py
