[project]
name = "aisnow"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "requests",
    "pyyaml",
    "python-dotenv",
    "pydantic",
    "langchain-openai",
    "langchain-core",
    "langgraph",
    "openai==1.55.3",
    "pandas",
    "openpyxl",
    "unstructured",
    "langchain-community",
    "uvicorn",
    "networkx",
    "python-multipart",
    "sqlparse",
    "snowflake-snowpark-python==1.24.0",
    "azure-storage-blob==12.23.0",
]

[tool.uv]
dev-dependencies = []
